@@ -2,6 +2,7 @@ User johns
 Date:
 
     Release Version 0.5.0
+    Enable/disable/toggle fullscreen with hot-key (Feature #930).
 
 User: CafeDelMar
 Date: Thu Apr  5 22:44:06 CEST 2012
